WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54614
Intermittent crashes beneath MarkStack::drain while compiling and/or executing program code
https://bugs.webkit.org/show_bug.cgi?id=54614
Summary
Intermittent crashes beneath MarkStack::drain while compiling and/or executin...
Geoffrey Garen
Reported
2011-02-16 21:04:50 PST
Intermittent crashes beneath MarkStack::drain
Attachments
One crashing example -- open and close repeatedly to crash
(758 bytes, text/html)
2011-02-16 21:06 PST
,
Geoffrey Garen
no flags
Details
Another crashing example -- open and close repeatedly to crash
(658 bytes, text/html)
2011-02-16 21:06 PST
,
Geoffrey Garen
no flags
Details
patch
(4.58 KB, patch)
2011-02-16 21:12 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-02-16 21:06:13 PST
Created
attachment 82751
[details]
One crashing example -- open and close repeatedly to crash
Geoffrey Garen
Comment 2
2011-02-16 21:06:44 PST
Created
attachment 82752
[details]
Another crashing example -- open and close repeatedly to crash
Geoffrey Garen
Comment 3
2011-02-16 21:07:29 PST
After hours of trying, I still haven't succeeded in making these test cases crash in DumpRenderTree. So, I'm attaching them here for posterity.
Geoffrey Garen
Comment 4
2011-02-16 21:11:00 PST
<
rdar://problem/8971070
>
Geoffrey Garen
Comment 5
2011-02-16 21:12:23 PST
Created
attachment 82753
[details]
patch
Maciej Stachowiak
Comment 6
2011-02-16 21:39:12 PST
Comment on
attachment 82753
[details]
patch r=me
WebKit Commit Bot
Comment 7
2011-02-16 23:17:21 PST
Comment on
attachment 82753
[details]
patch Clearing flags on attachment: 82753 Committed
r78795
: <
http://trac.webkit.org/changeset/78795
>
WebKit Commit Bot
Comment 8
2011-02-16 23:17:26 PST
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 9
2022-02-12 20:03:34 PST
***
Bug 54114
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug