Source/JavaScriptCore/runtime/JSGlobalObject.h
@@ -247,7 +247,8 @@ namespace JSC {
 
         void copyGlobalsFrom(RegisterFile&);
         void copyGlobalsTo(RegisterFile&);
-        
+        void resizeRegisters(int oldSize, int newSize);
+
         void resetPrototype(JSValue prototype);
 
         JSGlobalData& globalData() const { return *d()->globalData.get(); }
